# object_detection_tracking

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/lidar_msgs/: Object.h  ObjectData.h  Point2.h  Point3.h  PointF.h
devel/include/tracking_msgs/: DTLane.h  DetectedObject.h  DetectedObjectArray.h  Lane.h  LaneArray.h  Waypoint.h  WaypointState.h
devel/lib/pkgconfig/: lidar_msgs.pc  object_detection.pc  tracking_msgs.pc
devel/lib/python2.7/dist-packages/lidar_msgs/msg/: _Object.py  _ObjectData.py  _Point2.py  _Point3.py  _PointF.py  __init__.py
devel/lib/python2.7/dist-packages/tracking_msgs/msg/: _DTLane.py  _DetectedObject.py  _DetectedObjectArray.py  _Lane.py  _LaneArray.py  _Waypoint.py  _WaypointState.py  __init__.py
devel/share/common-lisp/ros/lidar_msgs/msg/: Object.lisp  ObjectData.lisp  Point2.lisp  Point3.lisp  PointF.lisp  _package.lisp  _package_Object.lisp  _package_ObjectData.lisp  _package_Point2.lisp  _package_Point3.lisp  lidar_msgs-msg.asd
devel/share/common-lisp/ros/tracking_msgs/msg/: DTLane.lisp  DetectedObject.lisp  DetectedObjectArray.lisp  (+13 more)
devel/share/lidar_msgs/cmake/: lidar_msgs-msg-paths.cmake  lidar_msgsConfig.cmake
devel/share/object_detection/cmake/: object_detection-msg-paths.cmake  object_detectionConfig.cmake
devel/share/roseus/ros/lidar_msgs/: manifest.l
devel/share/roseus/ros/object_detection/: manifest.l
devel/share/roseus/ros/tracking_msgs/: manifest.l
devel/share/tracking_msgs/cmake/: tracking_msgs-msg-paths.cmake  tracking_msgsConfig-version.cmake  tracking_msgsConfig.cmake
src/lidar_msgs/: CMakeLists.txt
src/lidar_msgs/msg/: Object.msg  ObjectData.msg
src/my_lib/classifier/: encode_util.py  h3d.py  image.py  main.py  pc.mat  pointnet_model.py  resnet_model.py  velo_utils.py  vgg_model.py
src/my_lib/classifier/log/: events.out.tfevents.1562424874.jing-OptiPlex-9020
src/my_lib/classifier/runs/: events.out.tfevents.1562289589.jing-OptiPlex-9020
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/include/: adaptive_clustering.h  bb_supervoxel_segmentor.hpp  box_type.h  erase_outlier_points.h  ground_filter.h  imm_ukf_pda.h  min_box.h  nanoflann.hpp  piecewise_plane_fitting.h  point_cloud_segmenter.h  ray_ground_filter.h  tracking.h  ukf.h  vec3.h
src/object_detection/launch/: object_detection.launch  object_detection_wad.launch  plane_ground_filter.launch
src/object_detection/src/: main.cpp
src/object_detection/src/cluster/: adaptive_clustering.cpp
src/object_detection/src/ground_filter/: ground_filter.cpp  piecewise_plane_fitting.cpp  ray_ground_filter.cpp
src/object_detection/src/postprocess/: convex_hull.cpp  min_box.cpp
src/object_detection/src/segment/: bb_supervoxel_segmentor.cpp  main.cpp  point_cloud_segmenter.cpp
src/object_detection/src/segment/line_segment/: CMakeLists.txt  LidarImage.hpp  RangeLineSegment.cpp  RangeLineSegment.h  range_img_features.cpp  range_img_features.h
src/object_detection/src/tracking/: imm_ukf_pda.cpp  tracking.cpp  ukf.cpp
src/tracking_msgs/: CMakeLists.txt  package.xml
src/tracking_msgs/msg/: DetectedObject.msg
(+26 files in other folders)
