<?xml version="1.0"?>
<package>
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>The object_detection package</description>
  <maintainer email="yuki@ertl.jp">kitsukawa</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>registration</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>registration</run_depend>
  
  <export>
  </export>
</package>
